# getmeta

./: .gitignore  Cargo.toml  README.md
.github/workflows/: python-publish.yml
single/: getmeta.py
src/: lib.rs  main.rs
